Fix the spacing

--- a/styles.less
+++ b/styles.less
@@ -145,7 +145,7 @@ body {
 	padding: 2rem 1rem;
 	@media (min-width: 60rem) {
 		padding: 6.813rem 6rem;
-		max-height: 100vh;
+		max-height: 64rem;
 	}
 	main {
 		display: grid;
@@ -156,7 +156,7 @@ body {
 		}
 		@media (min-width: 60rem) {
 			grid-template-columns: repeat(3, 1fr);
-			grid-template-rows: repeat(3, 1fr);
+			grid-template-rows: repeat(2, 1fr) 10rem;
 			gap: 1.875rem;
 			max-height: 55rem;
 		}
@@ -333,7 +333,6 @@ header {
 .footer {
 	@media (min-width: 60rem) {
 		grid-area: 3 / 1 / 4 / 4;
-		margin-top: 4.438rem;
 	}
 	&__list {
 		.flex(flex-start, flex-start, column);
